<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E5E5E5"
    tools:context="com.monte.mar.view.Carrito_activity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:text="Tu Carrito"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/black" />

    <GridView
        android:id="@+id/tablaCompras"
        android:layout_width="343dp"
        android:layout_height="454dp"
        android:layout_above="@+id/textPrecioComprando"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="2dp"
        android:numColumns="1" />

    <!--<androidx.cardview.widget.CardView
        android:layout_width="314dp"
        android:layout_height="71dp"
        android:layout_gravity="center"
        android:layout_marginStart="105dp"
        android:layout_marginTop="530dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="25dp"
        app:cardCornerRadius="20dp">-->

    <TextView
        android:id="@+id/textPrecioComprando"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="70dp"
        android:text="@string/precio_total"
        android:textColor="#000000"
        android:textSize="32sp"
        android:textStyle="bold" />

    <!--</androidx.cardview.widget.CardView>-->

    <TextView
        android:id="@+id/PrecioTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/comprar"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="2dp"
        android:layout_toEndOf="@+id/textPrecioComprando"
        android:text="@string/_00_00"
        android:textColor="#000000"
        android:textSize="32sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/comprar"
        android:layout_width="219dp"
        android:layout_height="58dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:background="@drawable/button_comprar"
        android:onClick="onClickBuy"
        android:text="@string/comprar"
        android:textColor="@color/white"

        />

    <Button
        android:id="@+id/button"
        android:layout_width="146dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tablaCompras"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="23dp"
        android:layout_marginEnd="56dp"
        android:layout_marginBottom="7dp"
        android:layout_toEndOf="@+id/textView"
        android:onClick="delete"
        android:text="Eliminar carrito" />


</RelativeLayout>