<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cv"
    android:layout_width="match_parent"
    android:layout_height="98dp"
    android:animateLayoutChanges="true"
    app:cardCornerRadius="15dp"
    app:cardElevation="4dp"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="85dp"
        android:animateLayoutChanges="true"
        android:orientation="vertical" >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:orientation="horizontal"
            android:padding="6dp" >

            <ImageView
                android:id="@+id/iconImageView"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:paddingLeft="14dp"
                android:paddingRight="14dp"
                app:srcCompat="@drawable/baseline_contact_mail_white_36" />

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="214dp"
                android:layout_height="64dp"
                android:layout_alignParentTop="true"
                android:layout_marginStart="4dp"
                android:layout_marginTop="2dp"
                android:layout_toEndOf="@+id/iconImageView"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textTitulo"
                    android:layout_width="215dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    android:text="@string/titulo"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textDescripcion"
                    android:layout_width="182dp"
                    android:layout_height="42dp"
                    android:text="@string/descripcion"
                    android:textSize="14sp" />



            </LinearLayout>


            <TextView
                android:id="@+id/textCantidad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/textPrecio"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="35dp"
                android:layout_marginEnd="6dp"
                android:layout_marginBottom="-27dp"
                android:text="1"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textPrecio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="35dp"
                android:layout_marginEnd="6dp"
                android:text="@string/_00_00"
                android:textSize="20sp"
                android:textStyle="bold" />


        </RelativeLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>














