<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E5E5E5"
    tools:context="com.monte.mar.view.Login_Activity">


    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animateView"
        android:layout_width="303dp"
        android:layout_height="238dp"
        android:layout_marginTop="36dp"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.4"
        app:lottie_autoPlay="true"
        app:lottie_fileName="spray-covid.json"
        app:lottie_loop="true" />


    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="320dp"
        android:layout_height="361dp"
        android:layout_marginTop="28dp"
        app:cardBackgroundColor="#FFFFFF"
        app:cardCornerRadius="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/animateView">

        <EditText
            android:id="@+id/registroEmail"
            android:layout_width="302dp"
            android:layout_height="49dp"
            android:background="@drawable/input_login"
            android:drawableStart="@drawable/ic_vectorarroba"
            android:drawablePadding="5dp"
            android:ems="10"
            android:layout_marginStart="8dp"
            android:hint="@string/email_"
            android:layout_marginTop="60dp"
            android:paddingStart="7dp"
            android:singleLine="true"
            tools:ignore="RtlSymmetry"
            tools:layout_editor_absoluteX="54dp"
            tools:layout_editor_absoluteY="647dp"
            android:autofillHints="autofillHints" />

        <EditText
            android:id="@+id/registroContraseña"
            android:layout_width="302dp"
            android:layout_height="49dp"
            android:background="@drawable/input_login"
            android:drawableStart="@drawable/ic_ri_lock_password_line"
            android:drawablePadding="5dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="130dp"
            android:ems="10"
            android:hint="@string/contrase_a"
            android:inputType="textPassword"
            android:paddingStart="7dp"
            android:singleLine="true"
            tools:ignore="RtlSymmetry"
            tools:layout_editor_absoluteX="54dp"
            tools:layout_editor_absoluteY="647dp" />

        <Button
            android:id="@+id/btnStartSession"
            android:layout_width="209dp"
            android:layout_height="48dp"
            android:background="@drawable/button_login"
            android:onClick="startSession"
            android:text="Login"
            android:layout_marginStart="90dp"
            android:layout_marginTop="200dp"
            tools:layout_editor_absoluteX="103dp" />

        <Button
            android:id="@+id/btnRegistrar"
            android:layout_width="209dp"
            android:layout_height="48dp"
            android:background="@drawable/button_registrar"
            android:onClick="Registrarse"
            android:text="@string/regitrarse"
            android:textColor="@color/white"
            android:layout_marginStart="8dp"
            android:layout_marginTop="265dp"
            tools:layout_editor_absoluteX="103dp"/>

    </androidx.cardview.widget.CardView>


    <!--<CheckBox
        android:id="@+id/checked"
        android:layout_width="118dp"
        android:layout_height="48dp"
        android:text="Guardar ?"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.857"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registroContraseña" />-->






    <!--<Button
        android:id="@+id/btndisminuir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="setDisminuir"
        android:text="Restando"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.105" />

    <Button
        android:id="@+id/btnaumntar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="48dp"
        android:onClick="setAumentar"
        android:text="Sumando"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.105" />

    <TextView
        android:id="@+id/txtcantidad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnaumntar"
        app:layout_constraintStart_toEndOf="@+id/btndisminuir"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.126" />-->


</androidx.constraintlayout.widget.ConstraintLayout>